<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_azul"
    tools:context=".RecuperarPassword1">


    <View
        android:id="@+id/rectangle_541"
        android:layout_width="417dp"
        android:layout_height="180dp"
        android:background="@drawable/view_profile_layout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:paddingLeft="125dp"
        android:paddingTop="25dp"
        android:text="LowCal"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold"
        android:translationX="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:translationX="40dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_lowcal" />

    <TextView
        android:id="@+id/textViewReservadasGraf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRecuperarPass"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.347" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="344dp"
        android:layout_height="82dp"
        android:text="@string/recuperarPassInfo1"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.259" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/azul_fuerte"
        app:errorEnabled="true"
        app:hintTextColor="@color/azul_fuerte"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreoPass"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="344dp"
        android:layout_height="82dp"
        android:text="@string/recuperarPassInfo2"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/button3"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:background="@drawable/boton_redondo_blanco"
        android:onClick="enviarComprobante"
        android:text="Enviar comprobante"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.69" />

    <TableRow
        android:layout_width="282dp"
        android:layout_height="69dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.88">

        <Button
            android:id="@+id/button"
            style="@style/MiBotonEstilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo_blanco"
            android:onClick="atras"
            android:text="@string/btnatras"
            android:textColor="@color/black" />

        <Space
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo_azul"
            android:backgroundTint="@color/encabezado"
            android:onClick="aceptar"
            android:text="@string/btnAceptar"
            android:textColor="@color/white" />
    </TableRow>




</androidx.constraintlayout.widget.ConstraintLayout>