<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_coach"
    tools:context=".IniciarSesion">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="441dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/encabezado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/rectangle_"
        android:layout_width="417dp"
        android:layout_height="180dp"
        android:background="@drawable/view_profile_layout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:layout_marginStart="24dp"
        android:paddingLeft="125dp"
        android:paddingTop="25dp"
        android:text="LowCal"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold"
        android:translationX="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:translationX="40dp"
        android:translationY="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/logo_lowcal" />

    <TextView
        android:id="@+id/txtViewCrear"
        android:layout_width="173dp"
        android:layout_height="47dp"
        android:text="Iniciar Sesión"
        android:textSize="25dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="278dp"
        android:layout_height="55dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="293dp"
        android:layout_height="71dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo_blanco"
            android:onClick="atras"
            android:text="@string/btnatras"
            android:textColor="@color/black" />

        <Space
            android:layout_width="70dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo_azul"
            android:onClick="red"
            android:text="@string/ingresar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
    </TableRow>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:clickable="true"
        android:onClick="recuperarPass"
        android:text="@string/opcionRecuperarPass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>