<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_azul"
    tools:context=".RecuperarPassword2">
    <View
        android:id="@+id/rectangle_541"
        android:layout_width="417dp"
        android:layout_height="180dp"
        android:background="@drawable/view_profile_layout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:paddingLeft="125dp"
        android:paddingTop="25dp"
        android:text="LowCal"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold"
        android:translationX="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:translationX="40dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_lowcal" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRecuperarPass"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.347" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="344dp"
        android:layout_height="82dp"
        android:text="@string/recuperarPassInfo3"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.259" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="Nueva contraseña"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.403" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/inputs"
        android:hint="Verificar contraseña"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.56" />

    <TableRow
        android:layout_width="282dp"
        android:layout_height="69dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_541"
        app:layout_constraintVertical_bias="0.778">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo_blanco"
            android:onClick="atras"
            android:text="@string/btnatras"
            android:textColor="@color/black" />

        <Space
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo_azul"
            android:backgroundTint="@color/encabezado"
            android:text="@string/btnnext"
            android:textColor="@color/white"
            />

    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>